Promenjeni nazivi obelezja: ROPI -> GP Uplift, GP -> SKU Promo GP

--- a/src/app/components/promo-dashboard/promo-dashboard.component.html
+++ b/src/app/components/promo-dashboard/promo-dashboard.component.html
@@ -89,45 +89,45 @@
                     </ng-container>
 
                     <ng-container matColumnDef="ropiLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Last Year
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Last Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI last year">{{ row.ropiLastYear }}%</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift last year">{{ row.ropiLastYear }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI This Year
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift This Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI">{{ row.ropiThisYear }}%</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift">{{ row.ropiThisYear }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiDifference">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Difference
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Difference
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI difference">{{ row.ropiDifference
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift difference">{{ row.ropiDifference
                             }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs Last
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Abs Last
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift abs last year">{{ row.ropiCashLastYear
                             | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs This
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Abs This
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift abs this year">{{ row.ropiCashThisYear
                             | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Cash
                             Difference
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash difference">{{ row.ropiCashDifference
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift cash difference">{{ row.ropiCashDifference
                             }}</mat-cell>
                     </ng-container>
 
@@ -184,45 +184,45 @@
                     </ng-container>
 
                     <ng-container matColumnDef="ropiLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Last Year
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Last Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI last year">{{ row.ropiLastYear }}%</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift last year">{{ row.ropiLastYear }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI This Year
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift This Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI">{{ row.ropiThisYear }}%</mat-cell>
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift">{{ row.ropiThisYear }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiDifference">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Difference
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Difference
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI difference">{{ row.ropiDifference
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift difference">{{ row.ropiDifference
                             }}%</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashLastYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs Last
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Abs Last
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI abs last year">{{ row.ropiCashLastYear
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift abs last year">{{ row.ropiCashLastYear
                             | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashThisYear">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Abs This
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Abs This
                             Year
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI abs this year">{{ row.ropiCashThisYear
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift abs this year">{{ row.ropiCashThisYear
                             | number:'':'es'}} din</mat-cell>
                     </ng-container>
 
                     <ng-container matColumnDef="ropiCashDifference">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">ROPI Cash
+                        <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">GP Uplift Cash
                             Difference
                         </mat-header-cell>
-                        <mat-cell *matCellDef="let row" data-label="ROPI cash difference">{{ row.ropiCashDifference
+                        <mat-cell *matCellDef="let row" data-label="GP Uplift cash difference">{{ row.ropiCashDifference
                             }}</mat-cell>
                     </ng-container>
 
@@ -309,7 +309,7 @@
 
 <!-- <mat-card class="card chart-card">
     <mat-card-header>
-        <mat-card-title>ROPI Cash by ProductCategories</mat-card-title>
+        <mat-card-title>GP Uplift Cash by ProductCategories</mat-card-title>
         <mat-card-subtitle *ngIf="!ropiCashByProductCategories || ropiCashByProductCategories.length === 0">No data for
             selected
             criteria</mat-card-subtitle>
@@ -318,7 +318,7 @@
         <ngx-charts-bar-vertical-2d *ngIf="ropiCashByProductCategories && ropiCashByProductCategories.length > 0"
             [view]="view" [scheme]="colorScheme" [results]="ropiCashByProductCategories" [gradient]="gradient"
             [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showYAxisLabel]="showYAxisLabel"
-            [showXAxisLabel]="showXAxisLabel" [xAxisLabel]="'Product Category'" [yAxisLabel]="'ROPI Cash'"
+            [showXAxisLabel]="showXAxisLabel" [xAxisLabel]="'Product Category'" [yAxisLabel]="'GP Uplift Cash'"
             [yAxisTickFormatting]="yAxisTickFormattingCash">
         </ngx-charts-bar-vertical-2d>
     </mat-card-content>
@@ -358,7 +358,7 @@
 
 <mat-card class=" card chart-card">
     <mat-card-header>
-        <mat-card-title>ROPI Cash by Period</mat-card-title>
+        <mat-card-title>GP Uplift Cash by Period</mat-card-title>
         <mat-card-subtitle *ngIf="!ropiCashByPeriod || ropiCashByPeriod.length === 0">No data for selected
             criteria</mat-card-subtitle>
     </mat-card-header>
@@ -366,7 +366,7 @@
         <ngx-charts-bar-vertical *ngIf="ropiCashByPeriod && ropiCashByPeriod.length > 0" [view]="view"
             [results]="ropiCashByPeriod" [gradient]="gradientBarChart" [scheme]="colorScheme" [xAxis]="showXAxis"
             [yAxis]="showYAxis" [legend]="showLegendBarChart" [showXAxisLabel]="showXAxisLabel"
-            [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="'ROPI cash'"
+            [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel" [yAxisLabel]="'GP Uplift cash'"
             [yAxisTickFormatting]="yAxisTickFormattingCash">
         </ngx-charts-bar-vertical>
     </mat-card-content>
