--- a/src/app/components/promo/promo.component.html
+++ b/src/app/components/promo/promo.component.html
@@ -116,20 +116,20 @@
             <ng-container matColumnDef="expenses">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Fix
                     investment Net</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.expenses }} din</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.expenses | number:'':'es'}} din</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="regularSale">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Reg
                     sale</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.regularSale }} din</mat-cell>
+                <mat-cell *matCellDef="let row">{{ row.regularSale | number:'':'es'}} din</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimatePromoSale">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est sale
                 </mat-header-cell>
                 <mat-cell *matCellDef="let row">{{ row.estimatePromoSale
-                    }} din</mat-cell>
+                    | number:'':'es'}} din</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estimateUplift">
@@ -161,14 +161,15 @@
             <ng-container matColumnDef="estimateGP">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo
                     GP</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.estimateGP}}%</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">{{ row.estimateGP.toFixed(2)}}%</mat-cell>
             </ng-container>
 
 
             <ng-container matColumnDef="estimateGPCash">
                 <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">Est SKU Promo GP
                     abs</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{ row.estimateGPCash}} din</mat-cell>
+                <mat-cell class="text-bold" *matCellDef="let row">{{ row.estimateGPCash | number:'':'es'}}
+                    din</mat-cell>
             </ng-container>
 
 
@@ -209,6 +210,12 @@
                         (click)="openDialog(6,false,row.promoId,row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, 0, row.gp)">
                         <mat-icon area-label="Copy">filter_none</mat-icon>
                     </button>
+
+                    <button mat-icon-button color="primary"
+                        (click)="openDialog(5,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)">
+                        <mat-icon area-label="Info">info</mat-icon>
+                    </button>
+
                     <button mat-stroked-button color="primary" *ngIf="type === 'MY_CONFIRMATION'"
                         (click)="openDialog(2,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)"><a
                             class=fix style="color:green">Confirm</a>
@@ -228,10 +235,6 @@
                         *ngIf="row.creatorUsername == loggedUser && type === 'PROMO_LIST' && !row.resultSale && calculateDiff(row.dateEnd) >= 3"
                         (click)="openDialog(4,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)">
                         <mat-icon area-label="Edit">edit</mat-icon>
-                    </button>
-                    <button mat-icon-button color="primary"
-                        (click)="openDialog(5,false, row.promoId, row.creatorUsername, row.retailerName, row.productName,row.declined,row.comment, row.dateStart, row.dateEnd, row.rebate,row.isRebateCascade, row.regularSale, row.type, row.estimateRopi, row.ropi, row.estimateRopiCash, row.ropiCash, row.estimatePromoSale, row.expenses, row.price, row.resultSale, row.gp)">
-                        <mat-icon area-label="Info">info</mat-icon>
                     </button>
                 </mat-cell>
             </ng-container>
@@ -326,7 +329,8 @@
                 <ng-container matColumnDef="ropiCash">
                     <mat-header-cell class="text-bold" *matHeaderCellDef mat-sort-header class="whitetext column-name">
                         GP Uplift Abs</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.ropiCash | number:'':'es'}}
+                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.ropiCash ? row.ropiCash : 0 |
+                        number:'':'es'}}
                         din</mat-cell>
                 </ng-container>
 
@@ -336,14 +340,15 @@
                 <ng-container matColumnDef="promoGp2">
                     <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">
                         SKU Promo GP</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.promoGp2 }}%</mat-cell>
+                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.promoGp2 ? row.promoGp2.toFixed(2) : 0
+                        }}%</mat-cell>
                 </ng-container>
 
 
                 <ng-container matColumnDef="promoGp2Cash">
                     <mat-header-cell *matHeaderCellDef mat-sort-header class="whitetext column-name">SKU Promo GP
                         abs</mat-header-cell>
-                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.gpCash | number:'':'es'}}
+                    <mat-cell class="text-bold" *matCellDef="let row">{{ row.gpCash ? row.gpCash : 0 | number:'':'es'}}
                         din</mat-cell>
                 </ng-container>
 
